# mitsumori-ai

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: extract.py  main.py  match.py  models.py  ocr_backend.py  sample_db.csv  semantic_match.py  utils.py
backend/tests/: test_utils.py
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: CsvDropzone.tsx  FailuresTable.tsx  PdfDropzone.tsx  ProgressBar.tsx  ResultsTable.tsx  RetryDialog.tsx  StatsCards.tsx  UploadPanel.tsx
